# USV_ROS

./: .cursorrules  .gitignore  .gitmodules  CHANGELOG.md  NOTICE  README.md  fix_setup.py  launch_sim_with_models.sh  patch_launch.py  update_setup.py
docs/: GIT_WORKFLOW.md  USV_ROS_SRC_LAYOUT.md  (+1 more)
src/usv_comm/usv_mavlink_bridge/: README.md  Readme.md  package.xml  setup.cfg  setup.py
src/usv_comm/usv_mavlink_bridge/config/: bridge_topics.yaml
src/usv_comm/usv_mavlink_bridge/docs/: mavros_info.md
src/usv_comm/usv_mavlink_bridge/launch/: demo_launch.py  usv_mavlink_bridge.launch.py
src/usv_comm/usv_mavlink_bridge/ros2_mav_demo/: gps_sim.py  imu_sim.py  mav_gps_bridge.py  mav_heartbeat.py  mav_imu_bridge.py  mav_rc_bridge.py  topic_contract.py
src/usv_comm/usv_mavlink_bridge/usv_mavlink_bridge/: __init__.py  autopilot_state_bridge.py  gps_sim.py  imu_sim.py  mav_gps_bridge.py  mav_heartbeat.py  mav_imu_bridge.py  mav_rc_bridge.py  topic_contract.py
src/usv_comm/usv_mqtt_bridge/: README.md  package.xml  setup.cfg  setup.py
src/usv_comm/usv_mqtt_bridge/config/: params.yaml
src/usv_comm/usv_mqtt_bridge/docs/: message_contract.md  mqtt_info.md  信风mqtt通信协议_0429导出.md
src/usv_comm/usv_mqtt_bridge/scripts/: publish_state_test.py
src/usv_comm/usv_mqtt_bridge/test/: README.md  publish_protocol_topics.py  publish_ros_triplet_and_verify_mqtt.py  test_command_dispatcher.py  test_protocol.py  test_serializers.py  test_throttlers.py
src/usv_comm/usv_mqtt_bridge/usv_mqtt_bridge/: command_dispatcher.py  mqtt_client.py  node.py  protocol.py  serializers.py
src/usv_comm/usv_mqtt_bridge/usv_mqtt_bridge/adapters/: __init__.py  action.py  ros_payload.py  service.py  topic.py
src/usv_interfaces/: CMakeLists.txt  README.md  package.xml
src/usv_interfaces/action/: ExecuteAutoTask.action
src/usv_interfaces/include/usv_interfaces/: topics.hpp
src/usv_interfaces/msg/: AISTrack.msg  AISTrackArray.msg  AIVisionTarget.msg  AIVisionTargets.msg  AisData.msg  AisRaw.msg  AlarmEvent.msg  BBox2D.msg  BatteryInfo.msg  BatteryStatus.msg  ControlDeviation.msg  DepthPosition.msg  DepthStatus.msg  DiagModuleStatus.msg  DiagResult.msg  DiagSummary.msg  FuelStatus.msg  GlobalTrack.msg  GlobalTrackArray.msg  GpsStatus.msg  HeartbeatStatus.msg  ImuStatus.msg  IoDeviceStatus.msg  IoStatus.msg  JetsonStatus.msg  McuStatus.msg  MissionDelta.msg  MmwRadarObject.msg  MmwaveTarget.msg  MmwaveTargetArray.msg  MotorStatus.msg  NavRadarFrame.msg  NavRadarObject.msg  NavRadarTarget.msg  NavRadarTargetArray.msg  OperationMode.msg  PerceptionTrajectories.msg  PerceptionTrajectory.msg  PipelineTimestamp.msg  RadarMmObstacle.msg  (+17 more)
src/usv_interfaces/ros2_mqtt/: README.md  package.xml  setup.cfg  setup.py
src/usv_interfaces/ros2_mqtt/launch/: usv_mqtt_bridge.launch.py
src/usv_interfaces/ros2_mqtt/test/: test_mqtt_client.py
src/usv_interfaces/ros2_mqtt/usv_mqtt_bridge/: __init__.py  node.py  protocol.py  serializers.py  throttlers.py
src/usv_interfaces/srv/: Arm.srv  AutopilotControl.srv  DiagRequest.srv  EStop.srv  IoControl.srv  ManualControl.srv  RadarNavConfig.srv  SetMode.srv  SetParams.srv  VideoControl.srv
src/usv_interfaces/usv_interfaces/: StandardDataTypes.md  topics.py
src/usv_monitor/: README.md  package.xml  setup.cfg  setup.py
src/usv_monitor/config/: monitor_params.yaml
src/usv_monitor/launch/: usv_monitor.launch.py
src/usv_monitor/usv_monitor/: alarm_watchdog_node.py  autopilot_control_service_node.py  heartbeat_node.py  system_status_node.py
src/usv_perception/mmwave_radar/: CMakeLists.txt  README.md  package.xml
src/usv_perception/mmwave_radar/config/: mmw_radar_params.yaml  mmw_radar_sim_params.yaml
src/usv_perception/mmwave_radar/launch/: sim_publish.launch.py
src/usv_perception/mmwave_radar/scripts/: mmw_radar_sim_publisher.py
src/usv_perception/mmwave_radar/src/: ra223f_node.cpp
src/usv_simulation/env_panel/: CMakeLists.txt  package.xml  plugin_description.xml
src/usv_simulation/env_panel/src/: vrx_env_panel.cpp
src/usv_simulation/sensor_plugins/gy_radar_driver-main/: CMakeLists.txt  package.xml  readme.md
src/usv_simulation/sensor_plugins/gz_maritime_radar_plugin/: CMakeLists.txt  README.md  package.xml
src/usv_simulation/sensor_plugins/radar_gz_bridge/: CMakeLists.txt  README.md  package.xml
src/usv_simulation/sensor_plugins/usv_mmwave_sim/: CMakeLists.txt  README.md  package.xml
src/usv_simulation/usv_sim_full/: .gitignore  README.md  package.xml  setup.cfg  setup.py
src/usv_simulation/usv_sim_full/config/: certi_senario.yaml  certi_senario_no_sensors.yaml  full_config.reference.yaml  full_config.yaml  mmwave_sydney_minimal.yaml  notes_config.md  radar_nav2_param.yaml  robot_localization_gps.yaml  sensor_config.yaml  tf_tune.rviz
src/usv_simulation/usv_sim_full/docs/: 仓库结构说明.md
src/usv_simulation/usv_sim_full/launch/: certifi_launch.launch.py  main.launch.py  mmwave_sydney_minimal.launch.py  nav2_sim_full_bringup.launch.py  nav2_thruster_bringup.launch.py  notes.md  sensor_tune.launch.py  spawn_mmwave_probe_in_running_sim.launch.py  target_ship_scale_test.launch.py  test_hull.launch.py
src/usv_simulation/usv_sim_full/rviz/: default.rviz  radar.rviz  usv_1_sensors_nav2.rviz  usv_radar_map_namespaced.rviz  usv_sim_full.rviz
src/usv_simulation/usv_sim_full/scripts/: load_robot_description.py  nav2_sim_full_bringup_staged.sh  obstacle_spawner.py  session_manager.py  session_manager_backup.py
src/usv_simulation/usv_sim_full/sh/: quick_start.sh  run_ocean_world_check.sh
src/usv_simulation/usv_sim_full/templates/: custom_thrusters.xacro  default.rviz  hull_macro.xacro  sensor_macros.xacro  wamv_no_battery.urdf.xacro
src/usv_simulation/usv_sim_full/test_env/: ocean.world  simple_water.sdf  target_ship_scale_test.md
src/usv_simulation/usv_sim_full/tools/: generate_certificate_cases.py  merge_certi_config.py  staged_rtf_benchmark.py
src/usv_simulation/usv_sim_full/usv_sim_full/: launch_config_helpers.py
src/usv_simulation/usv_sim_full/worlds/: ocean.world  sydney_regatta.sdf  sydney_regatta_open_water.sdf  target_ship_scale_test.sdf
(+256 files in other folders)
