<?xml version="1.0"?>
<package format="3">
  <name>usv_mavlink_bridge</name>
  <version>0.1.0</version>
  <description>Placeholder ROS 2 package for future USV MAVLink bridge integration.</description>
  <maintainer email="cursor@example.com">Cursor</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
