<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mmw_radar</name>
  <version>0.0.0</version>
  <description>毫米波雷达 UDP 驱动桥接（RA223F 协议），包目录 mmwave_radar</description>
  <maintainer email="daizhong@todo.todo">daizhong</maintainer>
  <license>Apache-2.0</license>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>usv_interfaces</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
