<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>env_panel</name>
  <version>0.1.0</version>
  <description>RViz2 panel plugin to control VRX environment wind, waves, and current with safe ramping.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>rcl_interfaces</depend>

  <build_depend>qtbase5-dev</build_depend>
  <exec_depend>qtbase5-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
