<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>radar_gz_bridge</name>
  <version>1.0.0</version>
  <description>Gazebo to ROS2 bridge for maritime radar data</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>marine_sensor_msgs</depend>

  <!-- Gazebo Harmonic -->
  <build_depend>gz-transport13</build_depend>
  <build_depend>gz-msgs10</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
