<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>usv_mmwave_sim</name>
  <version>0.2.0</version>
  <description>毫米波仿真一体化包：Gazebo Sim 插件（4D/验证）与 ROS 2 点云增强节点 mmwave_4d_cloud_node（gpu_ray 桥接后输出五字段点云）。</description>

  <maintainer email="1471072588@qq.com">cczh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>gz-plugin2</depend>
  <depend>gz-sim8</depend>
  <depend>gz-math7</depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
